--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -11,6 +11,8 @@
 <script src="/angular/angular-resource.min.js"></script>
 <script src="/angular/angular-cookies.min.js"></script>
 <script src="/ng-tags-input/ng-tags-input.min.js"></script>
+<script src="/ng-file-upload/ng-file-upload-shim.min.js"></script>
+<script src="/ng-file-upload/ng-file-upload.min.js"></script>
 <script src="/angular/courseMapper.js"></script>
 <script src="/xeditable/xeditable.min.js" type="text/javascript"></script>
 <!-- AdminLTE App -->
