--- a/views/admin-lte/cm-admin/mainMenu.ejs
+++ b/views/admin-lte/cm-admin/mainMenu.ejs
@@ -17,8 +17,8 @@
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Manage <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="#/categories">Categories</a></li>
-                            <!--<li><a href="#/tags">Tags</a></li>
-                            <li><a href="#/courses">Courses</a></li>
+                            <li><a href="#/applications">Applications</a></li>
+                            <!--<li><a href="#/courses">Courses</a></li>
                             <li class="divider"></li>
                             <li><a href="#/users">Users</a></li>-->
                         </ul>
